[package]
name = "fwcloud-agent"
version = "1.1.4"
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
description = "FWCloud Agent for firewalls management"
readme = "README.md"
homepage = "https://fwcloud.net"
repository = "https://github.com/soltecsis/fwcloud-agent"
authors = ["Carles Munyoz <cmunyoz@soltecsis.com>"]
keywords = ["fwcloud", "fwcloud-agent", "firewall", "firewall cloud", "iptables", "nftables", "openvpn"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "fwcloud-agent"

[package.metadata.deb] 
maintainer = "Carles Munyoz <cmunyoz@soltecsis.com>"
copyright = "SOLTECSIS, SL"
extended-description = """\
FWCloud Agent daemon for simplify and improve \
firewalls management from a FWCloud console."""
depends = "openssl"
conflicts = "firewalld"
section = "utility"
priority = "optional"
assets = [
    ["target/release/fwcloud-agent", "opt/fwcloud/agent/", "700"],
    [".env.example", "opt/fwcloud/agent/.env", "600"],
    ["plugins/lib.sh", "opt/fwcloud/agent/plugins/lib.sh", "700"],
    ["plugins/geoip/geoip.sh", "opt/fwcloud/agent/plugins/geoip/geoip.sh", "700"],
    ["plugins/openvpn/openvpn.sh", "opt/fwcloud/agent/plugins/openvpn/openvpn.sh", "700"],
    [".deb/fwcloud-agent.service", "lib/systemd/system/", "644"],
    [".deb/fwcloud-agent", "etc/logrotate.d/", "644"],
    [".deb/fwcloud-agent.1", "usr/share/man/man1/", "644"],
]
maintainer-scripts = ".deb/maintainer-scripts"

[package.metadata.rpm]
package = "fwcloud-agent"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
fwcloud-agent = { path = "/opt/fwcloud/agent/fwcloud-agent", mode = "700", username = "root" }

[package.metadata.rpm.files]
"../.env.example" = { path = "/opt/fwcloud/agent/.env", mode = "700", username = "root" }
"../plugins/lib.sh" = { path = "/opt/fwcloud/agent/plugins/lib.sh", mode = "700", username = "root" }
"../plugins/geoip/geoip.sh" = { path = "/opt/fwcloud/agent/plugins/geoip/geoip.sh", mode = "700", username = "root" }
"../plugins/openvpn/openvpn.sh" = { path = "/opt/fwcloud/agent/plugins/openvpn/openvpn.sh", mode = "700", username = "root" }
"../.deb/fwcloud-agent.1" = { path = "/usr/share/man/man1/fwcloud-agent.1", mode = "644", username = "root" }
"../.deb/fwcloud-agent.service" = { path = "/lib/systemd/system/fwcloud-agent.service", mode = "644", username = "root" }
"../.deb/fwcloud-agent" = { path = "/etc/logrotate.d/fwcloud-agent", mode = "644", username = "root" }

[dependencies]
actix = "0.13.0"
actix-web-actors = "4.1.0"
actix-web = { version = "4.1.0", features = ["openssl"] }
actix-service = "2.0.2"
actix-multipart = "0.4.0"
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.23"
openssl = { version = "0.10.41", features = ["vendored"] }
thiserror = "1.0.32"
dotenv = "0.15.0"
validator = { version = "0.16.0", features = ["derive"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.6.0"
log = "0.4.17"
env_logger = "0.9.0"
sanitize-filename = "0.4.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
thread-id = "4.0.0"
subprocess = "0.2.9"
sha2 = "0.10.2"
hex = "0.4.3"
httpdate = "1.0.2"

[dev-dependencies]
serial_test = "0.9.0"
reqwest = "0.11.11"
tokio-tungstenite = "0.17.2"
